--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 	<head>
 		<meta charset="UTF-8">
-		<title>CSS3 Tardis</title>
+		<title>CSS3 Doctor Who Tardis</title>
 
 		<link rel="stylesheet" href="index.css" />
 	</head>
